October 14 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Compiles again on linux
	* added imperialist and banana grower classes
	* added rough outline of New Attnam
	* added boulder
	
October 6 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Underscores now separate the words of all macros in the game
	* The prices of the items added in the last commit are now sane

October 5 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Optimized the generation of characters somewhat by disallowing
	  a few unnecessary cache recalculations
	* Mana is now hidden
	* Finally added a working equipment attribute bonus system
	* Added gauntlets of strength and dexterity
	* Added boots of strength
	* Boots of speed replaced with boots of agility which increase
	  the attribute instead of hasting the user; this way wands of
	  haste and Cleptia are useful even if the boots are equipped
	* Added helmets of piercing perception, understanding, brilliance
	  and attractivity
	* Added DefaultEnchantment database value for items
	* The game now says "Entering level x" instead of "Generating
	  level x"

October 5 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Using felist is now perhaps a bit easier
	* Picking up multiple items is now more convenient
	* Chest usage is now easier
	* Chests' StorageVolumes now work correctly
	* You can no longer earn money by putting things inside a chest
	  in your *own* inventory in a shop
	* Applying a chest now opens it
	* Tweaked the placement of the jungle island a little
	* The librarian now starts with some money so he can buy things
	  from the player even if the latter hasn't yet bought anything
	* Fixed a bug in New Attnam's entry pos

October 05 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Support for round corners for rooms added
	* Some rewriting of some really awful code in level.cpp, but not enough...
	* Started New Attnam (1 % done now or something like that)

September 30 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
