@@ -1934,7 +1934,7 @@ void whistle::BlowEffect(character* Whistler)
 	for(std::list<character*>::const_iterator i = game::GetTeam(c)->GetMember().begin(); i != game::GetTeam(c)->GetMember().end(); ++i)
 	  if((*i)->IsEnabled())
 	    {
-	      ulong ThisDistance = GetHypotSquare(long((*i)->GetPos().X) - GetPos().X, long((*i)->GetPos().Y) - GetPos().Y);
+	      ulong ThisDistance = HypotSquare(long((*i)->GetPos().X) - GetPos().X, long((*i)->GetPos().Y) - GetPos().Y);
 
 	      if(ThisDistance <= GetRange())
 		(*i)->SetWayPoint(GetPos());
